Address PR issues